[package]
name = "webdav"
version = "0.1.0"
authors = ["xiaoyu <xiaoyu@guanghe.tv>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
simple_logger = "1.11.0"
serde = "1.0.117"
serde_derive = "1.0.117"
quick-xml = { version = "0.17", features = [ "serialize" ] }
toml = "0.5.7"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }